--- a/blog-frontend/src/App.css
+++ b/blog-frontend/src/App.css
@@ -1,10 +1,3 @@
-#root {
-  /* max-width: 1280px; */
-  /* margin: 0 auto; */
-  /* padding: 2rem; */
-  /* text-align: center; */
-}
-
 .all-blog-container {
   width: 70%;
 }
@@ -35,4 +28,17 @@ button {
   padding: 0.5rem 1rem;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.delete-button {
+  background-color: rgb(251, 168, 168);
+  color: white;
+}
+
+.logged-in {
+  text-align: right;
+}
+
+.add-blog {
+  background-color: rgb(236, 159, 186);
 }
